--- a/pages/searchpage.html
+++ b/pages/searchpage.html
@@ -1,1 +1,11 @@
-<h2> Hi, this is searchpage </h2>
+{% load static %}
+<!doctype html>
+<html lang="en">
+	<head>
+		<title>CompaniesSearch - Search</title>
+		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+	</head>
+	<body>
+		<h1>Search</h1>
+	</body>
+</html>
