--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -4,8 +4,30 @@
 	<head>
 		<title>CompaniesSearch</title>
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<h1>Homepage</h1>
+		<!-- <h1>Homepage</h1> -->
+		<!-- <div class="container"> -->
+			<div class="row">
+				<div class="col-sm-6" style="background-color: #cccccc;height: 100%">
+					<h3>Let's find you company!</h3>
+				</div>
+				<div class="col-sm-6">
+					<form action="/action_page.php">
+						<input type="text" name="query" placeholder="Search by SPARQL queries format">
+						<br><br>
+						<input type="submit" value="Submit">
+					</form> 
+				</div>		
+			</div>
+		<!-- </div> -->
 	</body>
+	<!-- <div class="card text-center">
+		<div class="card-footer text-muted">
+			Powered By <small>Semweb Ranger</small>
+			&copy;2019
+		</div>
+	</div> -->
 </html>
