--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -15,10 +15,10 @@
 					<h3>Let's find you company!</h3>
 				</div>
 				<div class="col-sm-6">
-					<form action="/action_page.php">
+					<form>
 						<input type="text" name="query" placeholder="Search by SPARQL queries format">
 						<br><br>
-						<input type="submit" value="Submit">
+						<input type="submit" value="Submit" onclick="r'^search/'">
 					</form> 
 				</div>		
 			</div>
