--- a/pages/searchpage.html
+++ b/pages/searchpage.html
@@ -2,10 +2,38 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>CompaniesSearch - Search</title>
+		<title>CompaniesSearch</title>
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<h1>Search</h1>
+		<!-- <h1>Homepage</h1> -->
+		<!-- <div class="container"> -->
+			<div class="row">
+				
+					<form>
+						<div class="col-sm-6">
+							<input type="text" name="query" placeholder="Search by SPARQL queries format">
+							<br><br>
+						</div>
+						<div class="col-sm-6">
+							<input type="submit" value="Submit" onclick="r'^search/'">
+						</div>
+					</form> 
+						
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<p>Hasil search</p> 
+				</div>		
+			</div>
+		<!-- </div> -->
 	</body>
+	<!-- <div class="card text-center">
+		<div class="card-footer text-muted">
+			Powered By <small>Semweb Ranger</small>
+			&copy;2019
+		</div>
+	</div> -->
 </html>
