--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -10,18 +10,20 @@
 	<body>
 		<!-- <h1>Homepage</h1> -->
 		<!-- <div class="container"> -->
-			<div class="row">
-				<div class="col-sm-6" style="background-color: #cccccc;height: 100%">
+			<!-- <div class="row"> -->
+				<!-- <div class="col-sm-6" style="background-color: #cccccc;">
 					<h3>Let's find you company!</h3>
-				</div>
+				 </div>-->
+				<div class="col-sm-3"><span> </span></div>
 				<div class="col-sm-6">
 					<form>
-						<input type="text" name="query" placeholder="Search by SPARQL queries format">
+						<input type="text" name="query" width = "5" placeholder="Search by SPARQL queries format">
 						<br><br>
 						<input type="submit" value="Submit" onclick="r'^search/'">
 					</form> 
-				</div>		
-			</div>
+				</div>
+				<div class="col-sm-3"><span> </span></div>		
+			<!-- </div> -->
 		<!-- </div> -->
 	</body>
 	<!-- <div class="card text-center">
