modify UI for searchpage

--- a/pages/searchpage.html
+++ b/pages/searchpage.html
@@ -16,9 +16,13 @@
 					<button id="search_submit" type="submit" >Search</button>
 				</form> 
 			</div>
+			<h6><b>We find 6 results.</b></h6>
 			<hr>
 			<div class="row">
-				<p>List Hasil search</p>
+				<ul style="list-style-type:none;">
+					<li><a href="">Company 1</a></li>
+					<li><a href="">Company 2</a></li>
+				</ul>
 			</div>
 		</div>
 	</body>
