modify search field on hover and button on click for searchpage and homepage

--- a/pages/searchpage.html
+++ b/pages/searchpage.html
@@ -12,12 +12,16 @@
 		<div class="container">
 			<div class="row search">
 				<form type="get" action="." style="margin: 0">
+					<img src="{% static 'homeicon.png' %}" width="10%" />
 					<input  id="search_box" type="text" name="search_box"  placeholder="Search company name..." >
 					<button id="search_submit" type="submit" >Search</button>
 				</form> 
 			</div>
 			<h6><b>We find 6 results.</b></h6>
 			<hr>
+			<div class="row">
+				
+			</div>
 			<div class="row">
 				<ul style="list-style-type:none;">
 					<li><a href="">Company 1</a></li>
