--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -7,13 +7,14 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"/>
 		<link href="{% static 'css/homepage.css' %}" rel="stylesheet" type="text/css">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		
 	</head>
 	<body>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 center" style="text-align: center;">
 					<img src="{% static 'homeicon.png' %}" width="50%" />
-					<form type="get" action="." style="margin: 0">
+					<form type="get" action="{% url 'search' %}" style="margin: 0">
 						<input  id="search_box" type="text" name="search_box"  placeholder="Search company name..." >
 						<button id="search_submit" type="submit" >Search</button>
 					</form> 
