display value from search field form

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col-sm-6 center" style="text-align: center;">
 					<img src="{% static 'homeicon.png' %}" width="50%" />
-					<form type="get" action="{% url 'search' %}" style="margin: 0">
+					<form type="get" action="search/" style="margin: 0">
 						<input  id="search_box" type="text" name="search_box"  placeholder="Search company name..." >
 						<button id="search_submit" type="submit" >Search</button>
 					</form> 
